--- a/2012-10-11_AGM-Vortrag_Lhoods.tex
+++ b/2012-10-11_AGM-Vortrag_Lhoods.tex
@@ -245,7 +245,7 @@ Combined likelihood of several data sets:
 
  ~ 
 
-Include uncertainty of \jbar for each data set:
+Next: Include uncertainty of \jbar for each data set:
 
 \beq
 \L_i \ra \L_i \left(\sigmav, m_\chi, \jbar_i | \non, \noff \right) 
@@ -370,6 +370,23 @@ Only observations with positive excess:
     \includegraphics[width=.8\textwidth]{2012-10-05_positiveExcesses_PLs.pdf}
   \end{figure}
 
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+  \frametitle{Latest run}
+  \begin{figure}[]
+    \includegraphics[width=0.8\textwidth]{2012-10-10_50steps_PLs.pdf}
+  \end{figure}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+  \frametitle{Latest run}
+  \begin{figure}[]
+    \includegraphics[width=.8\textwidth]{2012-10-10_50steps_Excl.pdf}
+  \end{figure}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
